force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/FieloDRE__ObjectsToProcess__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Fielo Objects to process</label>
</CustomObject>