force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__FieldProcessed__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__FieldProcessed__c</fullName>
    <description>Se debe completar con el Nombre de API del campo (Checkbox) en donde se va a indicar que el registro fue procesado por el DRE</description>
    <inlineHelpText>Se debe completar con el Nombre de API del campo (Checkbox) en donde se va a indicar que el registro fue procesado por el DRE</inlineHelpText>
    <label>FieldProcessed</label>
    <length>40</length>
    <type>Text</type>
</CustomField>