force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__FieldTotalPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__FieldTotalPoints__c</fullName>
    <description>Se debe completar con el Nombre de API del campo en donde van a ser almacenados el total de puntos que aplican para el registro</description>
    <inlineHelpText>Se debe completar con el Nombre de API del campo en donde van a ser almacenados el total de puntos que aplican para el registro</inlineHelpText>
    <label>Field Total Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>