force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__RuleAppliedMasterLookup__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__RuleAppliedMasterLookup__c</fullName>
    <description>Se debe completar con el Nombre de API del campo lookup al objeto a procesar en el objeto "Fielo Rule Applied"</description>
    <inlineHelpText>Se debe completar con el Nombre de API del campo lookup al objeto a procesar en el objeto "Fielo Rule Applied"</inlineHelpText>
    <label>Rule Applied Master Lookup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>